2008-07-18	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed wrong cli_dispatch name in the manual
	* Fixed bug: DS was not set for importer when saving data. As a results storage folder was not recognized and tt_news category was missing
	* Disabled table name prepend in tt_news importer DS
	* Released version 1.0.4
	* Fixed bug: importer configuration was not shown
	* Released version 1.0.5

2008-06-27	Dmitry Dulepov	<dmitry@typo3.org>

	* Added documentation

2008-04-23	Dmitry Dulepov	<dmitry@typo3.org>

	* Added title field to feed records as palette

2008-04-18	Dmitry Dulepov	<dmitry@typo3.org>

	* First implementation ready

2008-04-17	Dmitry Dulepov	<dmitry@typo3.org>

	* Initial code generated with kickstarter