@@ -1,3 +1,7 @@
+2008-08-08	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Fixed problem with XCLASSes due to inclusion of t3lib_BEfunc
+
 2008-07-18	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed wrong cli_dispatch name in the manual
